# arkpz-pzpi-22-6-aranzhyi-ruslan

./: .gitignore  README.md
Pract1/: arkpz-pzpi-22-6-Aranzhyi-Ruslan-pract1.txt  arkpz-pzpi-22-6-aranzhyi-ruslan-pract1.txt
Pract2/: arkpz-pzpi-22-6-Aranzhyi-Ruslan-pract2.txt  arkpz-pzpi-22-6-aranzhyi-ruslan-pract2.txt
Task1/: arkpz-pzpi-22-6-Aranzhyi-Ruslan-task1.txt
Task2/: arkpz-pzpi-22-6-Aranzhyi-Ruslan-task2.txt  arkpz-pzpi-22-6-aranzhyi-ruslan-task2.txt
Task2/arkpz-pzpi-22-6-Aranzhyi-Ruslan-task2/: .gitignore  Dockerfile  pyproject.toml
Task2/arkpz-pzpi-22-6-Aranzhyi-Ruslan-task2/idk/: config.py  dependencies.py  main.py
Task2/arkpz-pzpi-22-6-Aranzhyi-Ruslan-task2/idk/models/: __init__.py  city.py  measurement.py  sensor.py  user.py
Task2/arkpz-pzpi-22-6-Aranzhyi-Ruslan-task2/idk/routers/: auth.py  forecast.py  measurements.py  sensors.py  user.py
Task2/arkpz-pzpi-22-6-Aranzhyi-Ruslan-task2/idk/routers/admin/: sensors.py  users.py
Task2/arkpz-pzpi-22-6-Aranzhyi-Ruslan-task2/idk/schemas/: cities.py  forecast.py  measurements.py  sensors.py  user.py
Task2/arkpz-pzpi-22-6-Aranzhyi-Ruslan-task2/idk/utils/: enums.py  jwt.py
Task2/arkpz-pzpi-22-6-Aranzhyi-Ruslan-task2/tests/: conftest.py  test_sensors.py  test_user.py
Task3/: .gitignore  arkpz-pzpi-22-6-aranzhyi-ruslan-task3.txt
Task4/: arkpz-pzpi-22-6-aranzhyi-ruslan-task4.txt
Task4/arkpz-pzpi-22-6-aranzhyi-ruslan-task4/: .gitignore  CMakeLists.txt  config.toml.example  main.cpp  sync-iot.sh
Task4/arkpz-pzpi-22-6-aranzhyi-ruslan-task4/include/: iot_sensor.h  measurement.h  measurement_source.h
Task4/arkpz-pzpi-22-6-aranzhyi-ruslan-task4/src/: iot_sensor.cpp  main.cpp  measurement_source.cpp
Task5/: .gitignore  arkpz-pzpi-22-6-aranzhyi-ruslan-task5.txt
Task5/arkpz-pzpi-22-6-aranzhyi-ruslan-task5/: .env.example  docker-compose.yml  pyproject.toml
Task5/arkpz-pzpi-22-6-aranzhyi-ruslan-task5/idk/: dependencies.py  localized_strings.py
Task5/arkpz-pzpi-22-6-aranzhyi-ruslan-task5/idk/models/: measurement.py
Task5/arkpz-pzpi-22-6-aranzhyi-ruslan-task5/idk/routers/: forecast.py  user.py
Task5/arkpz-pzpi-22-6-aranzhyi-ruslan-task5/idk/routers/admin/: __init__.py  cities.py
Task5/arkpz-pzpi-22-6-aranzhyi-ruslan-task5/idk/schemas/: auth.py
Task5/arkpz-pzpi-22-6-aranzhyi-ruslan-task5/tests/: conftest.py  test_admin_cities.py  test_admin_users.py  test_measurements.py  test_sensors.py
(+33 files in other folders)
